Moduł 30 - Dodanie komendy do cyklu zycia Mavena